Closed Bug 239734 Opened 22 years ago Closed 22 years ago

negotiateauth extension should not request mutual auth

Categories

(Core :: Networking, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.7final

People

(Reporter: darin.moz, Assigned: darin.moz)

Details

(Keywords: helpwanted)

Attachments

(1 file)

per these comments: see bug 17578 comment #241 see bug 17578 comment #242 see bug 17578 comment #243 the negotiateauth extension currently requests mutual auth but does not implement mutual auth. we should not request mutual auth unless we are going to fully implement it.
we should try to fix this for 1.7 final if possible. anyone want to help by contributing a patch?
Status: NEW → ASSIGNED
Keywords: helpwanted
Target Milestone: --- → mozilla1.7final
Attached patch simple fix...Splinter Review
Just set 'req_flags = 0;', simple enough, I think...
Comment on attachment 145503 [details] [diff] [review] simple fix... makes sense to me. sr=me provided folks agree that this is correct.
Attachment #145503 - Flags: superreview+
Attachment #145503 - Flags: review?(cneberg)
Comment on attachment 145503 [details] [diff] [review] simple fix... Looks good.
Attachment #145503 - Flags: review?(cneberg) → review+
Comment on attachment 145503 [details] [diff] [review] simple fix... this is a low-risk patch for a low-use feature ;-)
Attachment #145503 - Flags: approval1.7?
Comment on attachment 145503 [details] [diff] [review] simple fix... a=mkaply
Attachment #145503 - Flags: approval1.7? → approval1.7+
fixed-on-trunk for 1.7 final
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: