fixes bug 239734 "negotiateauth extension should not request mutual auth" patch by wyllys.ingersoll@sun.com r=cneberg@sandia.gov sr=darin a=mkaply